# ptbr-reranker

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  future-projects.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-modelcard.yml  release.yml
configs/: train_baseline.yaml  train_hardneg.yaml  train_hardneg_v1x_salad.yaml  train_hardneg_v2x.yaml  train_stage1b.yaml  train_stage1b_control_bce.yaml
data/: README.md  build_triples.py  download_mmarco.py  mine_hard_negatives.py
docs/: cloud_gpus.md  experiments_log.md  lab_notebook.md  model-card.md  quality-tests.md  reproducibility.md  results.md
docs/paper_assets/v0.1/: eval_mmarco_v0.1.json  eval_mmarco_v0.1_top1000.json
docs/paper_assets/v1.0/: eval_mmarco_v1.0_top1000.json
docs/paper_assets/v1.x/: eval_mmarco_v1.x_top1000.json
docs/paper_assets/v2.x/: eval_mmarco_v2.x_top1000.json
examples/: basic_usage.py  benchmark_comparison.py  rag_pipeline.py
notebooks/: README.md  kaggle_phase1_validation.ipynb
notebooks/phase1_validation/: kaggle_phase1_validation.ipynb  kernel-metadata.json
notebooks/phase2_mining/: kaggle_phase2_mining.ipynb  kernel-metadata.json
notebooks/phase3_training/: kaggle_phase3_training.ipynb  kernel-metadata.json
paper/: bibliography.bib  main.tex
paper/sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_method.tex  04_data.tex  05_experiments.tex  06_quality.tex  07_discussion.tex  08_limitations.tex  09_impact.tex  10_conclusion.tex  A_full_experiments.tex
scripts/: build_modelcard.py  hf_backup_loop.py  push_to_hub.py  reproduce.sh  runpod_terminate.sh  runpod_train.sh
space/: README.md  app.py  requirements.txt
src/: __init__.py  eval_juristcu.py  eval_miracl.py  eval_mmarco.py  eval_quati.py  model.py  rerank.py  stats.py  train.py
tests/: conftest.py  test_data_pipeline.py  test_integration.py  test_quality_bias.py  test_quality_calibration.py  test_quality_qualitative.py  test_quality_robustness.py  test_train_pipeline.py
