[project]
name = "ptbr-reranker"
version = "0.1.0"
description = "Cross-encoder reranker for Brazilian Portuguese based on Albertina-100m, trained on mMARCO-PT with mined hard negatives."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Stekel", email = "stekel@ifsp.edu.br" }]
keywords = [
    "portuguese",
    "brazilian-portuguese",
    "cross-encoder",
    "reranker",
    "information-retrieval",
    "sentence-transformers",
    "huggingface",
    "nlp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Portuguese (Brazilian)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2",
    "transformers>=4.44",
    "sentence-transformers>=3.0",
    "datasets>=2.20",
    "accelerate>=0.33",
    "huggingface-hub>=0.24",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "faiss-cpu>=1.8",
    "pytrec-eval>=0.5",
    "scikit-learn>=1.5",
    "wandb>=0.17",
    "codecarbon>=2.5",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
gpu = ["faiss-gpu>=1.7"]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]
demo = ["gradio>=4.40"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.urls]
Homepage = "https://github.com/stekel/ptbr-reranker"
Repository = "https://github.com/stekel/ptbr-reranker"
"Hugging Face" = "https://huggingface.co/stekel/cross-encoder-albertina-ptbr-mmarco"
Issues = "https://github.com/stekel/ptbr-reranker/issues"

[project.scripts]
ptbr-rerank = "src.rerank:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires GPU",
    "slow: slow tests (>30s)",
    "integration: end-to-end tests",
    "quality: model quality tests (Phase 5)",
]
addopts = "--strict-markers -ra"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
